# strava-customgpt-action

./: .pre-commit-config.yaml  README.md  pyproject.toml  sitecustomize.py  strava_recent_activities.py
.github/workflows/: ci.yml
scripts/: get_strava_token.sh
src/strava_customgpt_action/: __init__.py  activities.py  api.py  auth.py  cli.py  server.py  testing.py
tests/: conftest.py  test_activities.py  test_api.py  test_auth.py
